fixed bugs with position on mobile and logo

--- a/client/src/Components/Cards.css
+++ b/client/src/Components/Cards.css
@@ -1,6 +1,6 @@
 .alignCard {
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    margin-top: 8vh;
+    margin-bottom: 2vh;
 }
 
 h5, .text {
@@ -12,3 +12,4 @@ h5, .text {
     width: 120px;
     justify-content: center;
 }
+
