--- a/client/src/Components/FirstSection.css
+++ b/client/src/Components/FirstSection.css
@@ -1,6 +1,5 @@
 #marginRow {
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+
     font-family: roboto;
 }
 
