--- a/client/src/Components/HeroCarousel.css
+++ b/client/src/Components/HeroCarousel.css
@@ -28,7 +28,7 @@
   }
 
   #heroText {
-    padding-top: 20vh;
+    padding-top: 18vh;
     font-size: 6vw;
     color: white;
     font-family: ubuntu;
@@ -44,7 +44,7 @@
   }
 
   #heroText {
-    padding-top: 11vh;
+    padding-top: 10vh;
     font-size: 7vw;
     color: white;
     font-family: ubuntu;
@@ -61,7 +61,7 @@
 
   #heroText {
     padding-top: 7vh;
-    font-size: 8vw;
+    font-size: 6vw;
     color: white;
     font-family: ubuntu;
     margin-right: 25px;
